js/js.translator/testData/incremental/invalidation/privateObjectsLeakThroughSealedInterface/lib1/classA.1.kt
class ClassA {
    val leakedObject: SealedInterface get() = PrivateObject
}

private object PrivateObject : SealedInterface {
    override fun getNumber() = 1
}
